--- a/imgui_fbo_3d/CMakeLists.txt
+++ b/imgui_fbo_3d/CMakeLists.txt
@@ -3,6 +3,9 @@ add_executable(imgui_renderer
 
 target_link_libraries(imgui_renderer imgui glm_shared)
 
-set(RESOURCE_FILES
-    resource/fbo.fs
-    resource/fbo.vs)
+add_custom_target(copy_assets ALL
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    "${CMAKE_CURRENT_SOURCE_DIR}/assets"
+    "${CMAKE_CURRENT_BINARY_DIR}/assets"
+    COMMENT "Copy assets to build output"
+    VERBATIM)
